<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="45dp"
    android:layout_height="45dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/answer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/possibilities_grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/possibility_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_1"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/possibility_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_2"
            android:textSize="12sp"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/possibility_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/possibility_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_3"
            android:textSize="12sp"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/possibility_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/possibility_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_4"
            android:textSize="12sp"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/possibility_1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/possibility_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_5"
            android:textSize="12sp"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/possibility_4"
            app:layout_constraintEnd_toEndOf="@+id/possibility_2" />

        <TextView
            android:id="@+id/possibility_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_6"
            android:textSize="12sp"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/possibility_5"
            app:layout_constraintEnd_toEndOf="@+id/possibility_3" />

        <TextView
            android:id="@+id/possibility_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_7"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/possibility_4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/possibility_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_8"
            android:textSize="12sp"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/possibility_7"
            app:layout_constraintEnd_toEndOf="@+id/possibility_5" />

        <TextView
            android:id="@+id/possibility_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_9"
            android:textSize="12sp"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/possibility_8"
            app:layout_constraintStart_toStartOf="@+id/possibility_6" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>