<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveBoardFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <TextView
            android:id="@+id/select_dificulty_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/label_select_difficulty"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/difficulty_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_dificulty_label"
            app:layout_constraintVertical_bias="0.050000012">

            <RadioButton
                android:id="@+id/radio_easy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_board_easy"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/radio_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_board_medium"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/radio_hard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_board_hard"
                android:textColor="@color/white" />

        </RadioGroup>

        <Button
            android:id="@+id/button_save_fragment"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/button_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_cancel_save_fragment"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/button_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>